--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -9,3 +9,4 @@ gem "kramdown", ">= 2.3.1"
 gem "nokogiri", ">= 1.11.4"
 gem "rexml", ">= 3.2.5"
 gem "jekyll-remote-theme"
+gem "addressable", ">= 2.8.0"
